--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CreatorOrbit - Premium website development and conversion-focused copywriting. Developer + Writer Studio.">
     <title>CreatorOrbit - Websites That Actually Convert</title>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNJ63YS8EN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FNJ63YS8EN');
+    </script>
+    
     <style>
         * {
             margin: 0;
