--- a/index.html
+++ b/index.html
@@ -1264,9 +1264,9 @@
                 
                 <div class="footer-column">
                     <h4>Get In Touch</h4>
-                    <div class="contact-item">✉️ creatororbit48@gmail.com</div>
-                    <div class="contact-item">📷 @creator_orbit</div>
-                    <div class="contact-item">🐦 @creator_orbit</div>
+                    <a href="mailto:creatororbit48@gmail.com" class="contact-item">✉️ creatororbit48@gmail.com</a>
+                    <a href="https://instagram.com/creator_orbit" target="_blank" class="contact-item">📷 @creator_orbit</a>
+                    <a href="https://twitter.com/creator_orbit" target="_blank" class="contact-item">🐦 @creator_orbit</a>
                 </div>
             </div>
             
