--- a/index.html
+++ b/index.html
@@ -70,31 +70,32 @@
 
         nav .container {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: center;
+            gap: 80px;
         }
 
         .logo {
             display: flex;
             align-items: center;
-            gap: 10px;
-            font-size: 22px;
-            font-weight: 700;
-            color: var(--text-dark);
+            cursor: pointer;
+            flex-shrink: 0;
         }
 
-        .logo-icon {
-            width: 32px;
-            height: 32px;
-            background: linear-gradient(135deg, var(--primary-blue), #06B6D4);
-            border-radius: 50%;
+        .logo-img {
+            width: 180px;
+            height: auto;
+            object-fit: contain;
+            max-height: 50px;
         }
 
         .nav-links {
             display: flex;
             list-style: none;
-            gap: 40px;
+            gap: 32px;
             align-items: center;
+            margin-left: auto;
+            flex-shrink: 0;
         }
 
         .nav-links a {
@@ -447,9 +448,6 @@
             font-size: 24px;
             font-weight: 700;
             margin-bottom: 12px;
-            display: flex;
-            align-items: center;
-            gap: 12px;
         }
 
         .process-content p {
@@ -777,14 +775,24 @@
             margin-bottom: 40px;
         }
 
-        .footer-brand h3 {
-            font-size: 22px;
-            font-weight: 700;
+        .footer-brand {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        .footer-logo-img {
+            width: 600px;
+            height: auto;
+            object-fit: contain;
+            max-height: 150px;
             margin-bottom: 12px;
         }
 
         .footer-tagline {
             color: var(--text-light);
+            text-align: center;
         }
 
         .footer-column h4 {
@@ -816,6 +824,12 @@
             gap: 8px;
             color: var(--text-light);
             margin-bottom: 12px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .contact-item:hover {
+            color: white;
         }
 
         .footer-bottom {
@@ -863,6 +877,19 @@
                 display: none;
             }
 
+            .logo-img {
+                width: 150px !important;
+                max-height: 40px !important;
+            }
+
+            nav {
+                padding: 10px 0;
+            }
+
+            .hero {
+                padding: 140px 0 80px;
+            }
+
             .hero h1 {
                 font-size: 36px;
             }
@@ -888,6 +915,11 @@
                 gap: 40px;
             }
 
+            .footer-logo-img {
+                width: 300px !important;
+                max-height: 80px !important;
+            }
+
             .final-cta-section h2 {
                 font-size: 32px;
             }
@@ -911,8 +943,7 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <div class="logo-icon"></div>
-                CreatorOrbit
+                <img src="logo.png" alt="CreatorOrbit Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="#approach">Approach</a></li>
@@ -1248,7 +1279,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <h3>CreatorOrbit</h3>
+                    <img src="footlogo1.png" alt="CreatorOrbit Logo" class="footer-logo-img">
                     <p class="footer-tagline">Websites that convert.</p>
                 </div>
                 
@@ -1277,7 +1308,6 @@
     </footer>
 
     <!-- WhatsApp Floating Button -->
-    <!-- REPLACE 919876543210 with YOUR WhatsApp number (country code + number, no spaces) -->
     <a href="https://wa.me/917590055635?text=Hi!%20I'm%20interested%20in%20your%20website%20services" 
        class="whatsapp-float" 
        target="_blank"
